fixed spacing

--- a/style.css
+++ b/style.css
@@ -1226,7 +1226,7 @@ button {
 .info-image {
   width: 100%;
   max-width: clamp(360px, 43vw, 792px);
-  padding: clamp(12px, 2vw, 25px) 0;
+  padding: 0px;
   display: flex;
   justify-content: center;
   align-items: center;
